# clases_practicas

./: Cargo.toml  README.md
clases/clase1/: Cargo.toml  README.md
clases/clase1/src/: builder_helados.rs  coordenada.rs  correlativas.rs  errores.rs  iteraciones.rs  options.rs  saludar.rs  sort.rs
clases/clase1/tests/: sort.rs
clases/clase2/: Cargo.toml  README.md
clases/clase2/src/: boxes.rs  closure_borrow.rs  lifetime.rs  poly.rs  rc.rs  scopes.rs
clases/clase3/: Cargo.toml  README.md
clases/clase3/data/: data_en  data_sp
clases/clase4/: Cargo.toml  README.md
clases/clase4/src/: 00_client.rs  00_server.rs  01_bin_protocol_cli.rs  01_bin_protocol_srv.rs  02_open_ports.rs  alumno.rs
clases/clase6/: Cargo.toml
clases/clase6/src/: basic.rs  doc.rs  files.rs  lib.rs  server.rs
clases/clase6/tests/: integration_basic.rs  integration_files.rs  integration_server.rs
clases/clase6/tests/data/: testfile.txt
clases/clase_egui/: Cargo.toml
clases/gtk/: Cargo.toml
clases/sustentabilidad/: Cargo.toml  script_clase.md
clases/sustentabilidad/src/: main.rs
ejercicios/chat/src/: client.rs  error.rs  lib.rs  message.rs  operation.rs  server.rs
ejercicios/regex/: Cargo.toml
ejercicios/regex/src/: main.rs  regex.rs
src/: figuras.rs  lib.rs  main.rs  seniority.rs
tests/: sort.rs
